--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.5.0
 homepage: https://github.com/leonardoInf/cli_dialog
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.12.0'
 
 dependencies:
   dart_console: ^1.0.0
